KhangCBHE190295 - Add libs, update NetBeans config and currency tag
Add multiple third-party JARs under lib/lib (Jackson variants, JSTL, jbcrypt, MS SQL JDBC, etc.) and remove the archived lib.7z. Update NetBeans project metadata to include those libraries in the WAR/EAR: changes to nbproject/build-impl.xml to copy libs, nbproject/project.xml to set path-in-war entries, and nbproject/project.properties to add file.reference.lib-lib, include the lib in javac.classpath, and change javac.source/target from 25 to 17. Update genfiles and private project files (CRC values, user/tomcat paths, and open-files entries) to reflect local environment and project structure. Also fix formatting and locale usage in CurrencyFormatTag (use new Locale("vi","VN"), preserve null handling and output). These changes wire required dependencies into the build and align project settings to Java 17 and the developer's workspace.