@@ -16,13 +16,13 @@ import java.util.Locale;
 public class CurrencyFormatTag extends SimpleTagSupport {
     private BigDecimal value;
 
-    @Override
+   @Override
     public void doTag() throws JspException, IOException {
-        if (value == null) { getJspContext().getOut().write("N/A"); return; }
+       if (value == null) { getJspContext().getOut().write("N/A"); return; }
         // TODO: Tuỳ chỉnh format nếu cần
-        NumberFormat fmt = NumberFormat.getNumberInstance(Locale.of("vi", "VN"));
-        fmt.setMinimumFractionDigits(0);
-        getJspContext().getOut().write(fmt.format(value) + " đ");
+    NumberFormat fmt = NumberFormat.getNumberInstance(new Locale("vi", "VN"));
+       fmt.setMinimumFractionDigits(0);
+       getJspContext().getOut().write(fmt.format(value) + " đ");
     }
 
     public void setValue(BigDecimal value) { this.value = value; }
